# Virtual-Disk

./: .gitignore  README.md  disk_visualizer.py  main.py  pyproject.toml  run_webdav.py  speed_test.py  temp.py
src/: bitmap.py  config.py  constants.py  disk.py  inode.py  path.py  protocol.py  utils.py
src/disks/: crypto.py  file.py  infile.py  infile_encrypted.py  inmemory.py
src/virtual_disk/: bitmap.py  disk.py  path.py
src/virtual_disk/disks/: __init__.py  infile_encrypted.py
stubs/wsgidav/: dav_error.pyi  dav_provider.pyi  util.pyi
stubs/wsgidav/dc/: base_dc.pyi
templates/: dashboard.html
tests/: __init__.py  test_directory.py  test_fileio.py  test_inode.py  test_inodeio.py  test_path.py  test_root.py
webdav/: config.py  file_resource.py  filesystem.py  folder_resource.py
