[project]
name = "userlevel-virtual-file-system-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cheroot>=11.1.1",
    "wsgidav>=4.3.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]

[tool.mypy]
mypy_path = "stubs"
