[project]
name = "userlevel-virtual-file-system-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cheroot>=11.1.1",
    "wsgidav>=4.3.3",
]

[dependency-groups]
dev = [
    "fastapi>=0.121.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "uvicorn>=0.38.0",
]

[tool.mypy]
mypy_path = "stubs"
