[project]
name = "virtual-disk"
version = "1.0.0"
description = "This project is a user-level virtual filesystem implemented from scratch in Python. It simulates a standard UNIX-like filesystem structure, including inodes, data blocks, and bitmaps for allocation management. The filesystem can be backed by different storage mechanisms (in-memory, a single file, or an encrypted file) and can be mounted and accessed over the network via a built-in WebDAV server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cheroot>=11.1.1",
    "wsgidav>=4.3.3",
]

[project.optional-dependencies]
crypto = [
    "cryptography>=46.0.3",
]

[dependency-groups]
dev = [
    "fastapi>=0.121.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "uvicorn>=0.38.0",
]

[tool.mypy]
mypy_path = "stubs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]